@@ -1,3 +1,8 @@
+2005-10-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
+
+        * javax/swing/text/html/parser/ContentModel.java: Fixed comments for
+        parameterless constructor.
+
 2005-10-19  Roman Kennke  <kennke@aicas.com>
 
 	* javax/swing/JComponent.java
